Bug 368808 - No Notification Settings for Plasma 5 based Klipper
Summary: No Notification Settings for Plasma 5 based Klipper
Status: RESOLVED FIXED
Alias: None
Product: klipper
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.7.5
Platform: Gentoo Packages All
: NOR normal
Target Milestone: ---
Assignee: Martin Flöser
URL: https://phabricator.kde.org/D2942
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-14 13:52 UTC by Till Schäfer
Modified: 2016-10-06 11:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2016-09-14 13:52:06 UTC
In KDE4 Klipper showed a message when changing the clipboard by shortcut (e.g. next history item). It would be nice to re-add this feature to the Plasma 5 based Klipper as there is currently no feedback about the active klipper content. One need to remember exactly the number of steps/copy actions to get an old clipper entry. 

The notification settings should be configurable to adjust them to the individual needs (some people may not like the pop ups)

Reproducible: Always
Comment 1 Martin Flöser 2016-09-14 14:14:52 UTC
Call me surprised: I didn't know that feature existed.

As I just looked into the code:
1) Klipper::slotCycleNext and Klipper::slotCyclePrev emit passivePopup
2) KlipperTray connects the passivePopup signal to slotPassivePopup
3) slotPassivePopup shows a KNotification

That logic would need to be moved from KlipperTray to Klipper to support both the old and the new implementation.
Comment 2 Martin Flöser 2016-10-05 07:12:34 UTC
Addressed withhttps://phabricator.kde.org/D2942
Comment 3 Martin Flöser 2016-10-06 11:26:08 UTC
Git commit 77aaa88eb2a148f0955eb35b3043d3f0f81fae5b by Martin Gräßlin.
Committed on 06/10/2016 at 11:25.
Pushed by graesslin into branch 'Plasma/5.8'.

[klipper] Move notification from tray to Klipper

Summary:
Klipper shows a notification when the shortcuts next/prev history item
gets triggered. This notification used to be implemented in the class
KlipperTray. With the switch from SNI based clipper to a Plasmoid the
notification got lost as the Plasmoid doesn't use the KlipperTray class
at all.

This change moves the notification handling from KlipperTray to Klipper
so that it gets emitted for both SNI and Plasmoid based klipper.
FIXED-IN: 5.8.1

Test Plan: Set the shortcuts, triggered them and verified the notification gets shown.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2942

M  +1    -0    klipper/CMakeLists.txt
M  +12   -0    klipper/klipper.cpp
M  +3    -0    klipper/klipper.h
M  +0    -13   klipper/tray.cpp
M  +0    -5    klipper/tray.h

http://commits.kde.org/plasma-workspace/77aaa88eb2a148f0955eb35b3043d3f0f81fae5b